--- a/StarrockGame/Content/Data/Templates/Ancus.xml
+++ b/StarrockGame/Content/Data/Templates/Ancus.xml
@@ -5,7 +5,7 @@
     <Name>Ancus</Name>
     <File>Ancus</File>
     <TextureName>Ancus</TextureName>
-	<DefaultController>StarrockGame.AI.DestroyerController</DefaultController>
+	<DefaultController>StarrockGame.AI.HaulerController</DefaultController>
     <Score>250</Score>
     <Structure>2500</Structure>
     <Mass>2000</Mass>
