--- a/StarrockGame/Content/Data/Templates/Ancus.xml
+++ b/StarrockGame/Content/Data/Templates/Ancus.xml
@@ -66,7 +66,7 @@
       </Item>
     </Engines>
     <PrimaryWeaponBases>
-      <WeaponType>AdvHomingMissle</WeaponType>
+      <WeaponType>AdvHomingMissile</WeaponType>
       <Bases>
         <Item>
           <LocalPosition>20 -30</LocalPosition>
